# MathCAD-Prime-XML-Builder

./: README.md  currentxlmParsingAndZip2.py  main.py  mathcadRules.txt  pyproject.toml  rezip.py  scalingOperationsxlmParsingAndZip2.py  simpleUnzip.py  testingComplexDef.py
MathcadUnzip/_rels/: .rels
MathcadUnzip/docProps/: core.xml
MathcadUnzip/mathcad/: result.xml  worksheet.xml
MathcadUnzip/mathcad/_rels/: worksheet.xml.rels
MathcadUnzipEdited/: [Content_Types].xml
MathcadUnzipEdited/_rels/: .rels
MathcadUnzipEdited/docProps/: core.xml
MathcadUnzipEdited/mathcad/: result.xml  worksheet.xml
MathcadUnzipEdited/mathcad/xaml/: FlowDocument5.XamlPackage
Supporting/: Input.py  MathML.py  MathML_Samples.md  MathML_To_Mathcad_Notes.md  XML.py  config.py
_rels/: .rels
checkpoints/: aboutToAddComplexDef.py  backupxlmParsingAndZip2.py  brokenXamlParsingxlmParsingAndZip2.py  excelAndDefineDictionariesxlmParsingAndZip2.py  xlmParsingExponentsCheckpoint.py  xlmParsingMatrixCheckpoint.py  xlmParsingStackedEquationsCheckpointButItIsHardCoded.py  xmlParsingEquationCheckpoint.py
mcdx/: TESTING.xlsx  TestOutput.mcdx  TestOutput.xlsx  TestOutput2.mcdx  TestOutput3.mcdx  TestOutputUnzip.mcdx  a.xlsx  blank.mcdx  complexAssignment.mcdx  currentxlmParsingAndZip2.py  excelInput copy.xlsm  excelInput.xlsm  mathcadExcel.xlsm  negativeOneDemo.mcdx  newOut.xlsx  out.xlsx  subAndSuper.mcdx  testContinueStackParentheses.mcdx  testMathML.mcdx  testParseExpr.mcdx  textTesting.mcdx
mcdx/TestOutput - Copy - Copy/docProps/: app.xml
nonMain/: dwgToPDF.py  mathParsingTest.py
(+23 files in other folders)
