[project]
name = "mathcad-prime-xml-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime==4.11",
    "latex2mathml>=3.78.1",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "sympy>=1.14.0",
    "unicodeit>=0.7.5",
]
